...
        icon: Icons.add,
        activeIcon: Icons.close,
        backgroundColor: primaryColor,
        foregroundColor: Colors.white,
        children: [
          SpeedDialChild(
            key: const ValueKey('add_basic_entry_speed_dial_child'),
            child: const Icon(Icons.edit),
            label: 'Add Basic Entry',
            onTap: () {
              FirebaseAnalytics.instance.logEvent(
                name: AnalyticsEvents.addEntryButtonPressed,
              );

              pushAddEntryScreen(context);
            },
          ),
          SpeedDialChild(
            key: const ValueKey('scan_receipt_speed_dial_child'),
            child: const Icon(Icons.receipt),
            label: 'Scan Receipt',
            onTap: () => _handleReceiptScan(context),
          ),
        ],
        child: Image.asset(Assets.fountainPen, scale: 4.2),
...
